--- a/index.html
+++ b/index.html
@@ -554,17 +554,18 @@
                         </h2>
                         <form action="#">
                             <div class="mt-2 mb-3">
-                                <button type="submit"
-                                        class="btn bg-[#4a6cf7] opacity-90 py-3 block w-full border border-transparent">
-                                <a href="https://calendar.app.google/mcvihhigWGY9yFJ96" target="_blank">
-                                    Meet us
-                                </a>
-                            </button>
+                                <button type="submit" class="btn bg-[#4a6cf7] opacity-90 py-3 block w-full border border-transparent">
+                                    <a href="https://calendar.app.google/mcvihhigWGY9yFJ96" target="_blank">
+                                        Meet us
+                                    </a>
+                                </button>
                             </div>
                         </form>
                     </div>
                 </div>
-            </div>  
+            </div>
+            
+             
             <div class="ticket basis-2/3 ml-0 lg:ml-6 bg-gray-dark dark:bg-slate-800 rounded">
                 <div class="py-16 px-6 lg:px-12">
                     <div class="form-title">
