--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                             </svg>
                         </div>
                         <h3 class="text-neutral-900 dark:text-white font-bold text-3xl text-center">
-                            Role: Manual and Automation Spc.<span class="text-gray-500"> </span>
+                            Role: Manual and Automation Specialist<span class="text-gray-500"> </span>
                         </h3>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
                     </div>                    
